# Silent_loss_detector

./: QUICKSTART.md  README.md  app.py  pyproject.toml  sample_data_generator.py
src/callbacks/: investigation_callbacks.py  main_callbacks.py
src/layouts/: investigation_panel.py  main_dashboard.py
src/utils/: config.py  data_loader.py  helpers.py  logging_utils.py  operational_state.py
